[project]
name = "arclet-letoderea"
version = "0.14.5"
description = "A high-performance, simple-structured event system, relies on asyncio"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "tarina>=0.6.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["asyncio", "event-system", "dispatch", "dependency-injection"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/ArcletProject/Letoderea"
Homepage = "https://github.com/ArcletProject/Letoderea"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
[tool.pdm.build]
includes = ["arclet"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]